@@ -16,15 +16,15 @@ namespace Castle.MicroKernel.Registration
 {
 	using System;
 	using System.Collections.Generic;
-	using System.ComponentModel;
 	using System.Reflection;
 
 	using Castle.Core.Internal;
 
 	/// <summary>
-	///   Entry point to fluent way to register, by convention, multiple concrete (non-abstract) classes (that include also delegate types). Use static methods on the class to fluently build registration.
+	///   Entry point to fluent way to register, by convention, multiple types. No upfront filtering is done so literally every type will be considered. That means that usually some filtering done by user will be required. For a most common case where non-abstract classes only are to be considered use <see
+	///    cref = "Classes" /> class instead. Use static methods on the class to fluently build registration.
 	/// </summary>
-	public static class Classes
+	public static class Types
 	{
 		/// <summary>
 		///   Prepares to register types from a list of types.
@@ -33,7 +33,7 @@ namespace Castle.MicroKernel.Registration
 		/// <returns>The corresponding <see cref = "FromDescriptor" /></returns>
 		public static FromTypesDescriptor From(IEnumerable<Type> types)
 		{
-			return new FromTypesDescriptor(types, Filter);
+			return new FromTypesDescriptor(types, null);
 		}
 
 		/// <summary>
@@ -43,7 +43,7 @@ namespace Castle.MicroKernel.Registration
 		/// <returns>The corresponding <see cref = "FromDescriptor" /></returns>
 		public static FromTypesDescriptor From(params Type[] types)
 		{
-			return new FromTypesDescriptor(types, Filter);
+			return new FromTypesDescriptor(types, null);
 		}
 
 		/// <summary>
@@ -57,7 +57,7 @@ namespace Castle.MicroKernel.Registration
 			{
 				throw new ArgumentNullException("assembly");
 			}
-			return new FromAssemblyDescriptor(assembly, Filter);
+			return new FromAssemblyDescriptor(assembly, null);
 		}
 
 		/// <summary>
@@ -71,7 +71,7 @@ namespace Castle.MicroKernel.Registration
 			{
 				throw new ArgumentNullException("type");
 			}
-			return new FromAssemblyDescriptor(type.Assembly, Filter);
+			return new FromAssemblyDescriptor(type.Assembly, null);
 		}
 
 		/// <summary>
@@ -96,7 +96,7 @@ namespace Castle.MicroKernel.Registration
 				throw new ArgumentNullException("filter");
 			}
 			var assemblies = ReflectionUtil.GetAssemblies(filter);
-			return new FromAssemblyDescriptor(assemblies, Filter);
+			return new FromAssemblyDescriptor(assemblies, null);
 		}
 
 		/// <summary>
@@ -117,12 +117,6 @@ namespace Castle.MicroKernel.Registration
 		public static FromAssemblyDescriptor FromThisAssembly()
 		{
 			return FromAssembly(Assembly.GetCallingAssembly());
-		}
-
-		[EditorBrowsable(EditorBrowsableState.Never)]
-		internal static bool Filter(Type type)
-		{
-			return type.IsClass && type.IsAbstract == false;
 		}
 	}
 }
